// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Governance > submitting referendum, voting on it, and then cancelling it should work > events for alice's referendum vote 1`] = `
[
  {
    "data": {
      "amount": "(rounded 150000000)",
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 50000000000,
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
      "when": "(rounded 24000000)",
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
      "when": "(rounded 23000000)",
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 120000000)",
      "who": "13UVJyLnbVp9RBZYFwFGyDvVd1y27Tt8tkntv6Q7JVPhFsTB",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 29000000)",
      "who": "15MYgThgMfKf9Dz1TV1UC1RBiA8xDNYoGbKkkvXNtah8yACC",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 150000000)",
      "tip": 0,
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Governance > submitting referendum, voting on it, and then cancelling it should work > events for dave's referendum vote 1`] = `
[
  {
    "data": {
      "who": "138m6FMgQs3mqvkcr9iac14tzAGg2R59ZwniVNTJaonBSSaZ",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 160000000)",
      "who": "138m6FMgQs3mqvkcr9iac14tzAGg2R59ZwniVNTJaonBSSaZ",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 60000000000,
      "who": "138m6FMgQs3mqvkcr9iac14tzAGg2R59ZwniVNTJaonBSSaZ",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
      "when": "(rounded 24000000)",
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
      "when": "(rounded 23000000)",
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "138m6FMgQs3mqvkcr9iac14tzAGg2R59ZwniVNTJaonBSSaZ",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 130000000)",
      "who": "13UVJyLnbVp9RBZYFwFGyDvVd1y27Tt8tkntv6Q7JVPhFsTB",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 32000000)",
      "who": "15MYgThgMfKf9Dz1TV1UC1RBiA8xDNYoGbKkkvXNtah8yACC",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 160000000)",
      "tip": 0,
      "who": "138m6FMgQs3mqvkcr9iac14tzAGg2R59ZwniVNTJaonBSSaZ",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Governance > submitting referendum, voting on it, and then cancelling it should work > events for eve's referendum vote 1`] = `
[
  {
    "data": {
      "who": "1gKv3Sj4RGmqbd411Gsg81j4iEGZzGdqiywgEpizx3bhddE",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 180000000)",
      "who": "1gKv3Sj4RGmqbd411Gsg81j4iEGZzGdqiywgEpizx3bhddE",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 80000000000,
      "who": "1gKv3Sj4RGmqbd411Gsg81j4iEGZzGdqiywgEpizx3bhddE",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
      "when": "(rounded 24000000)",
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
      "when": "(rounded 23000000)",
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "1gKv3Sj4RGmqbd411Gsg81j4iEGZzGdqiywgEpizx3bhddE",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 140000000)",
      "who": "13UVJyLnbVp9RBZYFwFGyDvVd1y27Tt8tkntv6Q7JVPhFsTB",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 35000000)",
      "who": "15MYgThgMfKf9Dz1TV1UC1RBiA8xDNYoGbKkkvXNtah8yACC",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 180000000)",
      "tip": 0,
      "who": "1gKv3Sj4RGmqbd411Gsg81j4iEGZzGdqiywgEpizx3bhddE",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Governance > submitting referendum, voting on it, and then cancelling it should work > referendum info 1`] = `
{
  "ongoing": {
    "deciding": null,
    "decisionDeposit": null,
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x13030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 10000000000,
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "tally": {
      "ayes": 0,
      "nays": 0,
      "support": 0,
    },
    "track": 30,
  },
}
`;

exports[`Polkadot Governance > submitting referendum, voting on it, and then cancelling it should work > referendum submission events 1`] = `
[
  {
    "data": {
      "proposal": {
        "Inline": "(hash)",
      },
      "track": 30,
    },
    "method": "Submitted",
    "section": "referenda",
  },
]
`;
